# MLCHECKV2

./: AssumeOracle.csv  CexSet.csv  FeatureValueRange.csv  OracleData.csv  README.md  TestingData.csv  assumeData.txt  assumeLogic.txt  average_calc.py  dataInput.xml  ecoli.csv  feNameType.csv  hello.py  main.py  model_dt.joblib  model_nn.pt  param_dict.csv  param_list.csv  pyproject.toml
Model/: dectree_approx.joblib  dnn_model  dnn_model_sklearn
multi_utils/: multiLabelMain.py  trainDecTree.py
multi_utils/.ipynb_checkpoints/: trainDNN-checkpoint.ipynb
utils/: CreateData4mAssume.py  DNN2logic.py  Dataframe2XML.py  Pruning.py  PytorchDNNStruct.py  ReadZ3Output.py  ReadyiecesOutput.py  assert2logic.py  assume2logic.py  logic2assert.py  match_mutprediction.py  mlCheck.py  processCandCex.py  trainDNN.py  trainDecTree.py  tree2Logic.py  util.py
