[project]
name = "mlcheckv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "parsimonious>=0.10.0",
    "pydot>=3.0.4",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ucimlrepo>=0.0.7",
]
